<?xml version="1.0"?>
<package format="2">
  <name>gsl_catkin</name>
  <version>1.0.0</version>
  <description>Catkinized Guideline Support Library</description>

  <maintainer email="ghottiger@anybotics.com">Gabriel Hottiger</maintainer>
  <author email="ghottiger@anybotics.com">Gabriel Hottiger</author>

  <license>MIT</license>
  <url>https://github.com/anybotics/gsl</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>

